--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Javascript Problem Solving</title>
 </head>
 <body>
+    <h1>This is Javascript problem solving folder</h1>
     <script src="index.js"></script>
 </body>
 </html>
